--- a/src/containers/Settings/styles.css
+++ b/src/containers/Settings/styles.css
@@ -1,7 +1,14 @@
 .settings {
-    width: 500px;
+
     max-width: 100vw;
 }
+
+@media only screen and (min-width: 600px) {
+    .modal__container {
+        width: 500px;
+    }
+}
+
 .settings-field {
     width: 100%;
 }
